@@ -1243,21 +1243,10 @@ pdf_dev_eop (void)
 static void
 print_fontmap (const char *font_name, fontmap_rec *mrec)
 {
-  char *p;
   if (!mrec)
     return;
 
   MESG("\n");
-
-/*
-  The extension ".pfb" is not needed for type1 fonts.
-  And the extension ".pfb" prohibits to call mktexpk with right
-  arguments when pdftex.map is used and when type1 is not found.
-  Thus we discard the extension ".pfb". 
-*/
-  p = strrchr(mrec->font_name, '.');
-  if (p && strcasecmp(p, ".pfb") == 0)
-    *p = '\0';
 
   MESG("fontmap: %s -> %s", font_name, mrec->font_name);
   if (mrec->enc_name)
@@ -1301,6 +1290,7 @@ print_fontmap (const char *font_name, fontmap_rec *mrec)
 int
 pdf_dev_locate_font (const char *font_name, spt_t ptsize)
 {
+  char            *pp;
   pdf_dev         *p = current_device();
   int              i;
   fontmap_rec     *mrec;
@@ -1334,6 +1324,15 @@ pdf_dev_locate_font (const char *font_name, spt_t ptsize)
 
   /* New font */
   mrec = pdf_lookup_fontmap_record(font_name);
+/*
+  The extension ".pfb" is not needed for type1 fonts.
+  And the extension ".pfb" prohibits to call mktexpk with right
+  arguments when pdftex.map is used and when type1 is not found.
+  Thus we discard the extension ".pfb". 
+*/
+  pp = strrchr(mrec->font_name, '.');
+  if (pp && strcasecmp(pp, ".pfb") == 0)
+    *pp = '\0';
 
   if (dpx_conf.verbose_level > 1)
     print_fontmap(font_name, mrec);
